# proteus

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  STATUS.md  TEMP-FRONTEND-POLISH.md  rustfmt.toml  start-dev.sh
.agents/: PLANS.md  README.md
.agents/plans/: codex-rust-impl.md
.agents/prompts/: api-caveat-reconciliation-handoff.md  api-implementation-handoff.md  frontend-mvp.md  rust-testing-handoff.md
.github/workflows/: rust.yml
docs/: AGENTS.md  API-SPEC.md  BACKEND-GUIDELINES.md  BACKEND-TESTING.md  BACKLOG.md  CHANGELOG.md  FRONTEND-SPEC.md  NOTES.md  README.md  SPEC-CHANGELOG.md  SPEC-COMPANION.md  SPEC-OPS-COMPANION.md  SPEC-TOC.md  SPEC.md  THEORY.md
docs/analysis/: 2026-03-13_llm_plan.md  2026-03-13_synthesis.md  2026-03-15_claude_seeds.md  README.md  SPEC-v0-critique.md
frontend/: README.md  TEST-PLAN.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.module.css  App.test.jsx  App.tsx  constants.ts  main.tsx  styles.css  types.ts
frontend/src/components/: GridCanvas.module.css  GridCanvas.tsx  (+6 more)
legacy/: README.md
legacy/frontend/: README.md
legacy/python/: README.md  pyproject.toml  setup.py
legacy/python/benchmarks/: cases.py  engine_benchmark.py  parameter_sweep.py
legacy/python/src/proteus/: __init__.py  analysis.py  engine.py  models.py  seed_presets.py  worker.py
legacy/python/tests/: archive_utils.py  test_analysis.py  test_assembler.py
legacy/python/tests/golden_archives/: control_flow_bootstrap_tick0.json
legacy/rust/: README.md
python/: README.md
python/benchmarks/: engine_evaluation.py  live_monitor.py  parameter_sweep.py
python/tests/: test_analysis.py  test_api.py  test_engine.py  test_engine_acceleration.py  test_golden_archives.py
rust/: AGENTS.md  Cargo.toml  README.md
rust/src/: config.rs  cpu.rs  executor.rs  grid.rs  instruction.rs  lib.rs  model.rs  observe.rs  opcode.rs  pass1.rs  pass2.rs  pass3.rs  program.rs  random.rs  simulation.rs  world.rs
rust/src/web/: controller.rs  error.rs  mod.rs  smoke_test.html  types.rs  ws.rs
rust/tests/: conservation.rs  determinism.rs  multi_tick_regressions.rs  multi_tick_scenarios.rs  pass0_snapshot.rs  pass1_local.rs  pass2_nonlocal.rs  pass3_ambient.rs  pass3_packets.rs  property_invariants.rs  tick_driver.rs  web_api.rs
rust/tests/helpers/: mod.rs
src/: cell.rs  cpu.rs  executor.rs  grid.rs  instruction.rs  lib.rs  mutation.rs  physics.rs  program.rs  random.rs  simulation.rs  types.rs  world.rs
(+40 files in other folders)
