[package]
name = "proteus"
version = "0.1.0"
edition = "2021"
authors = ["Joey Arthur <josephgarthur@gmail.com>"]
repository = "https://github.com/jgarthur/proteus"

[[bin]]
name = "proteus"
path = "bin/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
fastrand = "2"
log = "0.4"
noise = "0.9"
rand = { version = "0.8" }
rayon = "1"

[dev-dependencies]
criterion = "0.5"
proptest = "1"

[profile.dev]

[profile.dev.package."*"]
opt-level = 2

[profile.release]
lto = true
codegen-units = 1
panic = "unwind"
