[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proteus"
version = "0.1.0"
description = "Proteus v0 simulator backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "numpy>=2.1,<3.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.3,<9.0",
]
cython = [
  "Cython>=3.0,<4.0",
  "setuptools>=70",
  "wheel",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
